route et controller de login

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": ["laravel/dusk"]
+
         }
     },
     "config": {
