--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "tailwindcss": "^2.1.2",
         "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "tailwindcss-dropdown": "^1.0.0"
     }
 }
