--- a/package.json
+++ b/package.json
@@ -25,7 +25,5 @@
         "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.12"
     },
-    "dependencies": {
-        "tailwindcss-dropdown": "^1.0.0"
-    }
+    "dependencies": {}
 }
